// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Should match snapshot for default 1`] = `
.emotion-0 {
  font-size: 15px;
  font-weight: 400;
  line-height: 1.33;
  -webkit-letter-spacing: -0.2px;
  -moz-letter-spacing: -0.2px;
  -ms-letter-spacing: -0.2px;
  letter-spacing: -0.2px;
  color: #2a225b;
}

<p
  class="emotion-0"
>
  Hello
</p>
`;

exports[`Button Should match snapshot for disabled 1`] = `
.emotion-0 {
  font-size: 15px;
  font-weight: 400;
  line-height: 1.33;
  -webkit-letter-spacing: -0.2px;
  -moz-letter-spacing: -0.2px;
  -ms-letter-spacing: -0.2px;
  letter-spacing: -0.2px;
  color: #2a225b;
}

<p
  class="emotion-0"
  disabled=""
>
  Hello
</p>
`;

exports[`Button Should match snapshot for with colors 1`] = `
.emotion-0 {
  font-size: 15px;
  font-weight: 400;
  line-height: 1.33;
  -webkit-letter-spacing: -0.2px;
  -moz-letter-spacing: -0.2px;
  -ms-letter-spacing: -0.2px;
  letter-spacing: -0.2px;
  color: #2a225b;
  color: #2a225b;
}

.emotion-1 {
  font-size: 15px;
  font-weight: 400;
  line-height: 1.33;
  -webkit-letter-spacing: -0.2px;
  -moz-letter-spacing: -0.2px;
  -ms-letter-spacing: -0.2px;
  letter-spacing: -0.2px;
  color: #2a225b;
  color: #5856d6;
}

.emotion-2 {
  font-size: 15px;
  font-weight: 400;
  line-height: 1.33;
  -webkit-letter-spacing: -0.2px;
  -moz-letter-spacing: -0.2px;
  -ms-letter-spacing: -0.2px;
  letter-spacing: -0.2px;
  color: #2a225b;
  color: #9fa6c7;
}

.emotion-3 {
  font-size: 15px;
  font-weight: 400;
  line-height: 1.33;
  -webkit-letter-spacing: -0.2px;
  -moz-letter-spacing: -0.2px;
  -ms-letter-spacing: -0.2px;
  letter-spacing: -0.2px;
  color: #2a225b;
  color: #fd5573;
}

.emotion-4 {
  font-size: 15px;
  font-weight: 400;
  line-height: 1.33;
  -webkit-letter-spacing: -0.2px;
  -moz-letter-spacing: -0.2px;
  -ms-letter-spacing: -0.2px;
  letter-spacing: -0.2px;
  color: #2a225b;
  color: #24bdb9;
}

.emotion-5 {
  font-size: 15px;
  font-weight: 400;
  line-height: 1.33;
  -webkit-letter-spacing: -0.2px;
  -moz-letter-spacing: -0.2px;
  -ms-letter-spacing: -0.2px;
  letter-spacing: -0.2px;
  color: #2a225b;
  color: #fd9727;
}

<div>
  <p
    class="emotion-0"
  >
    I am text
  </p>
  <p
    class="emotion-1"
  >
    I am primary
  </p>
  <p
    class="emotion-2"
  >
    I am placeholder
  </p>
  <p
    class="emotion-3"
  >
    I am alert
  </p>
  <p
    class="emotion-4"
  >
    I am success
  </p>
  <p
    class="emotion-5"
  >
    I am warning
  </p>
</div>
`;

exports[`Button Should match snapshot for with variants 1`] = `
.emotion-0 {
  font-size: 15px;
  line-height: 1.33;
  color: #9fa6c7;
}

.emotion-1 {
  font-size: 15px;
  font-weight: 500;
  line-height: 1.6;
  color: #2a225b;
}

.emotion-2 {
  font-size: 15px;
  font-weight: 400;
  line-height: 1.33;
  color: #2a225b;
}

.emotion-3 {
  font-size: 15px;
  font-weight: 400;
  line-height: 1.33;
  -webkit-letter-spacing: -0.2px;
  -moz-letter-spacing: -0.2px;
  -ms-letter-spacing: -0.2px;
  letter-spacing: -0.2px;
  cursor: pointer;
  color: #5856d6;
}

.emotion-3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  font-size: 15px;
  font-weight: 400;
  line-height: 1.33;
  -webkit-letter-spacing: -0.2px;
  -moz-letter-spacing: -0.2px;
  -ms-letter-spacing: -0.2px;
  letter-spacing: -0.2px;
  cursor: pointer;
  color: #9fa6c7;
}

.emotion-4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-5 {
  font-size: 12px;
  font-weight: 400;
  line-height: 1.67;
  -webkit-letter-spacing: -0.2px;
  -moz-letter-spacing: -0.2px;
  -ms-letter-spacing: -0.2px;
  letter-spacing: -0.2px;
  color: #9fa6c7;
}

.emotion-6 {
  font-size: 14px;
  font-weight: 400;
  color: #9fa6c7;
}

<div>
  <span
    class="emotion-0"
  >
    Placeholder
  </span>
  <span
    class="emotion-1"
  >
    Table Item
  </span>
  <span
    class="emotion-2"
  >
    Table Value
  </span>
  <a
    class="emotion-3"
  >
    Text Link
  </a>
  <a
    class="emotion-4"
  >
    Text Link - Cancel
  </a>
  <span
    class="emotion-5"
  >
    Caption
  </span>
  <span
    class="emotion-6"
  >
    Breadcrumb navigation
  </span>
</div>
`;
